--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <title>Kalkulator</title>
 </head>
 <body class="content">
-    <div class="container">
-        <h1>Calculator 1.0</h1>
-        <button class="speedButton">Find km</button>
+    <div class="col-lg-4  container">
+        <h1>Elliptical calculator 1.0</h1>
+        <button class="kmButton">Find your km value for MVM</button>
         <h5></h5>
     </div>
-    
+
+
+
     <script src="app.js"></script>
 </body>
 </html>
